# LeeJeongmin-project

./: README.md
1st-project/: 1_기획서.pptx  2_개발스케줄표.xlsx  3_화면설계서.pptx  README.md
1st-project/first_project/: .env.example  .gitignore  config.py  csv_to_oracle.py  ottproject.cmd  requirements.txt  trainmodel.py  오티티_1차프로젝트.csv
1st-project/first_project/ott/: __init__.py  forms.py  models.py
1st-project/first_project/ott/static/: animation.js  (+2 more)
cellsam/: .gitignore  pyproject.toml  requirements.txt
cellsam/cellsam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cellsam/cellsam_models/: anchor_detr.py  backbone.py  cellsam.py  cellsam_inference.py  inference.py  inference_test.py  matcher.py  segmentation.py  transformer.py  utils.py
cellsam/cellsam_models/AnchorDETR/: transform.py
cellsam/cellsam_models/AnchorDETR/models/: __init__.py  anchor_detr.py  backbone.py  matcher.py  segmentation.py  transformer.py
cellsam/cellsam_models/archive/: inference.py
cellsam/cellsam_models/train/: dataset.py  train.py  train_neck.py
mini_project/deep_learning/: README.md  gradient_descent.py  gradient_vanishing.py  perceptron.py  update_weight.py
mini_project/deep_learning/cnn/: cnn.py
mini_project/deep_learning/dnn/: baesian.py  loss.py  perceptron.py  sgd_single_variable.py
mini_project/python_practice/: README.md
mini_project/python_practice/AddressBook/: Address.py  README.md  SmartPhone.py  SmartPhoneMain.py
mini_project/python_practice/AddressBook_Inherited/: Address.py  CompanyAddr.py  CustomerAddr.py  README.md  SmartPhone.py  SmartPhoneMain.py
(+9 files in other folders)
